Bug 459603 - Login Multiple Times on the Same Account
Summary: Login Multiple Times on the Same Account
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-24 13:14 UTC by James Graham
Modified: 2022-11-07 18:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description James Graham 2022-09-24 13:14:42 UTC
SUMMARY
***
If you go to neochat settings' account tab you can login to account you have already logged into. 


STEPS TO REPRODUCE
1. Login to first account
2.  Go to account settings
3. Click add an account and login to the same account again

OBSERVED RESULT
You are logged in a second time and can switch between two instances of the same account in the roomList

EXPECTED RESULT
The attempt to login is rejected

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS
KDE Plasma Version: 5.25.5
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.6
Kernel Version: 5.19.8-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 580 Series
Manufacturer: Micro-Star International Co., Ltd
Product Name: MS-7C02
System Version: 1.0

ADDITIONAL INFORMATION
Comment 1 Tobias Fella 2022-09-24 13:15:42 UTC
Yeah, we should definitely prevent that, it will screw up libquotient's database
Comment 2 Bug Janitor Service 2022-10-29 13:41:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/580
Comment 3 James Graham 2022-11-07 18:26:51 UTC
Git commit 5bd184b29753c5d68776c84f70a7d0689c11ddc7 by James Graham.
Committed on 07/11/2022 at 18:26.
Pushed by nvrwhere into branch 'master'.

Prevent logging into the same account twice

Check if an account is already logged in before allow the login process to continue.

M  +17   -0    src/login.cpp
M  +5    -0    src/login.h
M  +1    -1    src/qml/Component/Login/Login.qml

https://invent.kde.org/network/neochat/commit/5bd184b29753c5d68776c84f70a7d0689c11ddc7