Prevent logging into the same account twice

Check if an account is already logged in before allow the login process to continue.

BUG:459603